--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,14 @@
 name = "pd-ligand-mpnn"
 requires-python = ">=3.9,<3.10"
 scripts = { run-ligand = "ligand_mpnn.run:main" }
-version = "0.1.1"
+version = "0.1.2"
 
 dependencies = [
-    "biopython==1.79",
-    "filelock==3.13.1",
-    "fsspec==2024.3.1",
-    "Jinja2==3.1.3",
-    "MarkupSafe==2.1.5",
+    "biopython",
+    "filelock",
+    "fsspec",
+    "Jinja2",
+    "MarkupSafe",
     "mpmath==1.3.0",
     "networkx==3.2.1",
     "numpy==1.23.5",
